--- a/TP1/Informe/66.02 - TP1.Grupo.1.tex
+++ b/TP1/Informe/66.02 - TP1.Grupo.1.tex
@@ -514,7 +514,7 @@ Con estos valores sensados podemos calcular el valor de \textit{Regulación de c
 \end{center}
 
 \begin{equation}
-	\varepsilon_r\%(\eta_c) = \textbf{0.19\% CORROBORAR LOS DELTA }
+	\varepsilon_r\%(\eta_c) = \textbf{0.19\%}
 \end{equation}
 
 \bigskip\bigskip
@@ -546,7 +546,7 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 \end{center}
 
 \begin{equation}
-	\varepsilon_r(R) = \textbf{0.089} = \textbf{8.9\%} \\
+	\varepsilon_r(R) = \textbf{0.089} \equiv \textbf{8.9\%} \\
 \end{equation}
 \bigskip\bigskip
 
@@ -668,7 +668,7 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 
 
 \begin{equation}
-	\varepsilon_r(R) = \textbf{0.011} =\textbf{1.1\%} \\
+	\varepsilon_r(R) = \textbf{0.011} \equiv \textbf{1.1\%} \\
 \end{equation}
 \bigskip\bigskip
 
@@ -699,7 +699,7 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 \section{Conclusión}
 
 	Hemos transitado por varias experiencias y gracias a ellas hemos podido consolidar la idea de que los multímetros deben ser considerados como factores de incidencia y variabilidad a la hora de realizar mediciones. Es decir, uno debe ser conciente de que estos no son instrumentos ideales y de que los valores que se midan dependerán de cómo se configure la conexión ya que los mismos influirán en el funcionamiento del dispositivo a mesurar. \\
-\indent Además, hay que señalar la importancia  de tomar en cuenta, al momento de realizar las mediciones, la magnitud de los valores que se van a medir, y decidir si el instrumento elegido es el adecuado, ya que sin esta reflexión previa se puede desembocar en un error mucho mas grande del esperado.  
+\indent Además, hay que señalar la importancia  de tomar en cuenta, al momento de realizar las mediciones, la magnitud de los valores que se van a medir, y decidir si el instrumento elegido es el adecuado, ya que sin esta reflexión previa se puede desembocar en un error mucho mas grande de lo esperado.  
 
 
 
