--- a/trunk/TP1/Informe/66.02 - TP1.Grupo.1.tex
+++ b/trunk/TP1/Informe/66.02 - TP1.Grupo.1.tex
@@ -229,7 +229,7 @@
 	\par
 	Estas variaciones se deben a que las resistencias internas de los instrumentos son diferentes. Idealmente, estas resistencias internas son infinitas, de tal modo que por el voltímetro no pase corriente. Pero en la realidad, esto es imposible.
 	\par
-	Si miramos el \textbf{Circuito (a)}, en el mutímetro analógico se leyeron $6V$, mientras que en el multímetro digital se observaron $8,91V$. Como los multímetros están en serie con la fuente y la resistencia de 100k$\Omega$, a mayor resistencia interna del instrumento, menor va a ser la corriente que circula, y mayor el voltaje que lee el instrumento. En el caso del analógico, los $6V$ leídos significan que los otros $3V$ se perdieron en la resistencia de 100k$\Omega$. En cambio, con el digital sólo caen $0,09V$ en la resistencia, lo que significa que la corriente es menor en este caso, y el multímetro digital se acerca más que el analógico a lo ideal.
+	Si miramos el \textbf{Circuito (a)}, en el mutímetro analógico se leyeron $6V$, mientras que en el multímetro digital se observaron $8,91V$. Como los multímetros están en serie con la fuente y la resistencia de 100k$\Omega$, a mayor resistencia interna del instrumento, menor va a ser la corriente que circula, y mayor la tensión que lee el instrumento. En el caso del analógico, los $6V$ leídos significan que los otros $3V$ se perdieron en la resistencia de 100k$\Omega$. En cambio, con el digital sólo caen $0,09V$ en la resistencia, lo que significa que la corriente es menor en este caso, y el multímetro digital se acerca más que el analógico a lo ideal.
 	\par
 	Estos resultados reflejan la importancia de conocer la resistencia interna de los instrumentos que estamos utilizando para mesurar ya que, inevitablemente influirán en la precisión y exactitud de los datos de las variables que estamos midiendo.
 \bigskip
@@ -307,15 +307,15 @@
 			\multirow{5}{*}{\textbf{100$\Omega$}} 
 			& \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} & \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} \\\cline{2-9}
 			& V & mA & k$\Omega$ & \% & V & mA & k$\Omega$ & \% \\\cline{2-9}
-			& 0.200 & 1.98 & 0.101 & 2.60 & 0.2 & 1.2 & 0.17 & 15.58 \\\cline{2-9}
-			& 0.397 & 3.94 & 0.101 & 1.84 & 0.4 & 3.2 & 0.13 & 9.33 \\\cline{2-9}
-			& 0.601 & 5.96 & 0.101 & 1.58 & 0.6 & 5.6 & 0.11 &  7.22 \\ \hline
+			& 18.46 & 188.1 & 0.0981 & 1.39 & 4 & 44 & 0.909 & 3.85 \\\cline{2-9}
+			& 7.49 & 75.9 & 0.0987 & 1.56 & 6 & 66 & 0.909 & 3.57 \\\cline{2-9}
+			& 3.68 & 36.9 & 0.0997 & 1.85 & 8 & 88 & 0.909 &  3.43 \\ \hline
 			\multirow{5}{*}{\textbf{100k$\Omega$}} 
 			& \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} & \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} \\\cline{2-9}
 			& V & mA & k$\Omega$ & \% & V & mA & k$\Omega$ & \% \\\cline{2-9}
-			& 28.0 & 0.280 & 100 & 8.14 & 2.0 & 0.030 & 67 & 11.33 \\\cline{2-9}
-			& 29.0 & 0.290 & 100 & 7.90 & 4.0 & 0.062 & 65 & 7.11 \\\cline{2-9}
-			& 30.0 & 0.300 & 100 & 7.67 & 6.0 & 0.094 & 64 & 5.73 \\ \hline
+			& 30.94 & 0.31 & 99.81 & 7.53 & 4 & 0.062 & 64.52 & 7.11 \\\cline{2-9}
+			& 27.86 & 0.28 & 99.50 & 8.23 & 6 & 0.078 & 64.10 & 6.28 \\\cline{2-9}
+			& 29.85 & 0.30 & 99.50 & 7.75 & 8 & 0.092 & 65.22 & 5.75 \\ \hline
 		\end{tabular}
 
 	\caption{Tabla de valores medidos y calculados para el\\ circuito de la Figura 4.}
@@ -387,15 +387,15 @@
 			\multirow{5}{*}{\textbf{100$\Omega$}} 
 			& \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} & \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} \\\cline{2-9}
 			& V & mA & k$\Omega$ & \% & V & mA & k$\Omega$ & \% \\\cline{2-9}
-			& 0.199 & 1.66 & 0.120 & 2.78 & 0.2 & 1.0 & 0.20 & 15.70 \\\cline{2-9}
-			& 0.401 & 3.35 & 0.120 & 1.90 & 0.4 & 2.6 & 0.15 &  9.38 \\\cline{2-9}
-			& 0.600 & 5.02 & 0.120 & 1.65 & 0.6 & 4.4 & 0.14 & 7.25 \\ \hline
+			& 8.51 & 68.5 & 0.124 & 1.58 & 1 & 8.8 & 0.114 & 6.64 \\\cline{2-9}
+			& 11.05 & 91.8 & 0.120 & 1.51 & 1.2 & 9.0 & 0.133 &  6.19 \\\cline{2-9}
+			& 14.84 & 134.4 & 0.110 & 1.44 & 1.4 & 9.6 & 0.146 & 5.83 \\ \hline
 			\multirow{5}{*}{\textbf{100k$\Omega$}} 
 			& \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} & \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} \\\cline{2-9}
 			& V & mA & k$\Omega$ & \% & V & mA & k$\Omega$ & \% \\\cline{2-9}
-			& 28.0 & 0.280 & 100 & 8.14 & 2.0 & 0.020 & 100 & 13.0 \\\cline{2-9}
-			& 29.0 & 0.290 & 100 & 7.90 & 4.0 & 0.040 & 100 & 8.00\\\cline{2-9}
-			& 30.0 & 0.300 & 100 & 7.67 & 6.0 & 0.062 & 100 & 6.28 \\ \hline
+			& 32.95 & 0.32 & 102.97 & 7.33 & 5 & 0.048 & 104.17 & 7.08 \\\cline{2-9}
+			& 29.99 & 0.29 & 103.41 & 7.98 & 7 & 0.068 & 102.94 & 5.90\\\cline{2-9}
+			& 27.70 & 0.27 & 102.59 & 8.49 & 9 & 0.087 & 103.45 & 5.26 \\ \hline
 		\end{tabular}
 
 	\caption{Tabla de valores medidos y calculados para el\\ circuito de la Figura 5.}
@@ -458,7 +458,7 @@
 %% DESARROLLO - PARTE 3 - Método directo
 \subsubsection{Método directo}
 
-	Armaremos ahora el circuito de la \textit{Figura 6}. Para este se utilizarán la fuente de laboratorio \textit{F4} (la cual entrega una tensión de 7.07V continuos), el multímetro digital \textit{UNI-T Modelo UT30F} (en función de voltímetro), el multímetro digital \textit{Brymen BM837RS} (en función de amperímetro) y una resistencia variable de 10k$\Omega$.
+	Armaremos ahora el circuito de la \textit{Figura 6}. Para este se utilizarán la fuente de laboratorio \textit{F4} (la cual entrega una tensión de 7.04V continuos), el multímetro digital \textit{UNI-T Modelo UT30F} (en función de voltímetro), el multímetro digital \textit{Brymen BM837RS} (en función de amperímetro) y una resistencia variable de 10k$\Omega$.
 \bigskip
 
 
@@ -482,7 +482,7 @@
 		\begin{tabular}{|c|c|c|c|c|c|c|c|c|} \hline
 			\multicolumn{4}{|c|}{\textbf{Llave SW abierta}} & \multicolumn{4}{c|}{\textbf{Llave SW cerrada}} \\ \hline
 			\textbf{I [mA]} & \textbf{$\varepsilon_{\%}$(I)} & \textbf{V [V]} & \textbf{$\varepsilon_{\%}$(V)} & \textbf{I [mA]} & \textbf{$\varepsilon_{\%}$(I)} & \textbf{V [V]} & \textbf{$\varepsilon_{\%}$(V)} \\\cline{1-8}
-			0 & 0 & 7.07 & 0.10 & 31.30 & 1.06 & 6.89 & 0.10 \\\cline{1-8}
+			0 & 0 & 7.04 & 0.09 & 109 & 1.38 & 6.41 & 0.1 \\\cline{1-8}
 		\end{tabular}
 
 	\caption{Tabla de valores medidos por método directo.}
@@ -496,7 +496,7 @@ Con estos valores sensados podemos calcular el valor de \textit{Regulación de c
 \bigskip
 
 \begin{equation}
- 	\eta_c = {V_0 - V_{PC} \over V_0} = {7.07V - 6.89V \over 7.07V} = \textbf{2.55\%}
+ 	\eta_c = {V_0 - V_{PC} \over V_0} = {7.04V - 6.41V \over 7.04V} = \textbf{8.95\%}
 \end{equation}
 \bigskip
 
@@ -506,15 +506,15 @@ Con estos valores sensados podemos calcular el valor de \textit{Regulación de c
 \bigskip
 
 \begin{center}
-	$\varepsilon_r\%(\eta_c) = (|{1 \over V_{0}}| \times \Delta V_{pc} + |{V_{pc} \over V_{0}^2}| \times \Delta V_{0})\times 100\% $ \\
+	$\varepsilon_r\%(\eta_c) = {(|{1 \over V_{0}}| \times \Delta V_{pc} + |{V_{pc} \over V_{0}^2}| \times \Delta V_{0})\over \eta_c}\times 100 $ \\
 \end{center}
 
 \begin{center}
-	$\varepsilon_r\%(\eta_c) = (|{1 \over 7.07V}| \times 6.89mV + |{6.89V \over (7.07V)^2}| \times 7.07mV)\times 100\%$ \\
+	$\varepsilon_r\%(\eta_c) = {(|{1 \over 7.04V}| \times 6.63mV + |{6.41V \over (7.04V)^2}| \times 6.13mV)\over \eta_c}\times 100$ \\
 \end{center}
 
 \begin{equation}
-	\varepsilon_r\%(\eta_c) = \textbf{0.19\%}
+	\varepsilon_r\%(\eta_c) = \textbf{1.90\%}
 \end{equation}
 
 \bigskip\bigskip
@@ -524,7 +524,7 @@ Con estos valores sensados podemos calcular el valor de \textit{Regulación de c
 \bigskip
 
 \begin{equation}
-	R = {V_{0} - V_{pc} \over I_{pc}} = {7.07V - 6.89V \over 31.30mA} = \textbf{5.75$\Omega$} \\
+	R = {V_{0} - V_{pc} \over I_{pc}} = {7.04V - 6.41V \over 109mA} = \textbf{5.78$\Omega$} \\
 \end{equation}
 \bigskip
 
@@ -542,11 +542,11 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 \end{center}
 
 \begin{center}
-	$\varepsilon_r(R) = |{1\over 0.18V}|\times 2\times 7.07mV+ |{1  \over  (31.30mA)}| \times 0.332mA$ \\
+	$\varepsilon_r(R) = |{1\over 0.63V}|\times 2\times 6.13mV+ |{1  \over  (109mA)}| \times 1.51mA$ \\
 \end{center}
 
 \begin{equation}
-	\varepsilon_r(R) = \textbf{0.089} \equiv \textbf{8.9\%} \\
+	\varepsilon_r(R) = \textbf{0.033} \equiv \textbf{3.33\%} \\
 \end{equation}
 \bigskip\bigskip
 
@@ -555,8 +555,8 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 \medskip
 
 \begin{center}
-	$R = (5.75 \pm 0.51)\Omega $ \\ \medskip
-	$\eta_c = (2.55 \pm 0.19)\% $ 
+	$R = (5.8 \pm 0.2)\Omega $ \\ \medskip
+	$\eta_c = (8.95 \pm 1.90)\% $ 
 \end{center}
 \bigskip\bigskip
 
@@ -604,7 +604,7 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 		\begin{tabular}{|c|c|c|c|c|c|c|c|c|} \hline
 			\multicolumn{4}{|c|}{\textbf{Llave SW abierta}} & \multicolumn{4}{c|}{\textbf{Llave SW cerrada}} \\ \hline
 			\textbf{I [mA]} & \textbf{$\varepsilon_{\%}$(I)} & \textbf{V [V]} & \textbf{$\varepsilon_{\%}$(V)} & \textbf{I [mA]} & \textbf{$\varepsilon_{\%}$(I)} & \textbf{V [V]} & \textbf{$\varepsilon_{\%}$(V)} \\\cline{1-8}
-			0 & 0 & 0.006 & 1.51 & 31.30 & 1.06 & -0.220 & 0.53 \\\cline{1-8}
+			0 & 0 & 0.013 & 0.84 & 114.4 & 1.38 & -0.807 & 0.20 \\\cline{1-8}
 		\end{tabular}
 
 	\caption{Tabla de valores medidos por método diferencial.}
@@ -618,7 +618,7 @@ Con estos valores sensados podemos calcular el valor de \textit{Regulación de c
 \bigskip
 
 \begin{equation}
- 	\eta_c = {V_0 - V_{PC} \over V_0} = {0.006V - (-0.220V) \over 0.006V} = \textbf{1.03\%}
+ 	\eta_c = {V_0 - V_{PC} \over V_0} = {0.013V - (-0.807V) \over 0.013V} = \textbf{1.02\%}
 \end{equation}
 \bigskip
 
@@ -627,15 +627,15 @@ Con estos valores sensados podemos calcular el valor de \textit{Regulación de c
 \bigskip
 
 \begin{center}
-	$\varepsilon_r\%(\eta_c) = (|{1 \over V_{0}}| \times \Delta V_{pc} + |{V_{pc} \over V_{0}^2}| \times \Delta V_{0})\times 100 $ \\
+	$\varepsilon_r\%(\eta_c) = {(|{1 \over V_{0}}| \times \Delta V_{pc} + |{V_{pc} \over V_{0}^2}| \times \Delta V_{0} \over \eta_c})\times 100 $ \\
 \end{center}
 
 \begin{center}
-	$\varepsilon_r\%(\eta_c) = (|{1 \over 0.006V}| \times 1.166mV + |{-0.220V \over (0.006V)^2}| \times 90.6\mu V)\times 100$ \\
+	$\varepsilon_r\%(\eta_c) = {(|{1 \over 0.013V}| \times 0.11mV + |{0.807V \over (0.013V)^2}| \times 1.65mV) \over \eta_c}\times 100$ \\
 \end{center}
 
 \begin{equation}
-	\varepsilon_r\%(\eta_c) = \textbf{0.75\%}
+	\varepsilon_r\%(\eta_c) = \textbf{?\%}
 \end{equation}
 
 \bigskip\bigskip
@@ -645,7 +645,7 @@ Con estos valores sensados podemos calcular el valor de \textit{Regulación de c
 \bigskip
 
 \begin{equation}
-	R = {V_{0} - V_{pc} \over I_{pc}} = {7.07V - 6.89V \over 31.30mA} = \textbf{5.75$\Omega$} \\
+	R = {V_{0} - V_{pc} \over I_{pc}} = {0.013V +0.807V\over 114.4mA} = \textbf{7.17$\Omega$} \\
 \end{equation}
 \bigskip
 
@@ -663,12 +663,12 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 \end{center}
 
 \begin{center}
-	$\varepsilon_r(R) = |{1\over 0.226V}|\times 2\times 0.091mV+ |{1  \over  (31.30mA)}| \times 0.332mA$ \\
+	$\varepsilon_r(R) = |{1\over 0.82V}|\times 2\times ?mV+ |{1  \over  (114.4mA)}| \times 1.57mA$ \\
 \end{center}
 
 
 \begin{equation}
-	\varepsilon_r(R) = \textbf{0.011} \equiv \textbf{1.1\%} \\
+	\varepsilon_r(R) = \textbf{?} \equiv \textbf{?\%} \\
 \end{equation}
 \bigskip\bigskip
 
@@ -677,8 +677,8 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 \medskip
 
 \begin{center}
-	$R = (5.75 \pm 0.06)\Omega $ \\ \medskip
-	$\eta_c = (2.55 \pm 0.19)\% $ 
+	$R = (7.17 \pm 0.06)\Omega $ \\ \medskip
+	$\eta_c = (1.02 \pm )\% $ 
 \end{center}
 \bigskip\bigskip
 
