TP1 Correccion: mas cosas

--- a/TP1/Informe/66.02 - TP1.Grupo.1.tex
+++ b/TP1/Informe/66.02 - TP1.Grupo.1.tex
@@ -694,7 +694,7 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 %% DESARROLLO - PARTE 3 - Diferencias entre métodos
 \subsubsection{Diferencias entre métodos}
 
-	Los resultados de los procedimientos, como puede notarse, no poseen gran disparidad. Sin embargo, si uno observa las incertezas, se puede advertir que es allí en donde los métodos difieren. Claramente en el \textit{método diferencial} se introduce menos error debido a que el error sistemático es menos significativo, es decir, se reduce. La diferencia de incertezas reside en que en el circuito medido por el método diferencial no se calcula la resta de los valores de tensión en vacío y tensión de plena carga que aparecen en el numerador de la expresión de regulación de carga de la \textit{Ecuación 7}. Por esta razón es que podemos concluir que el \textit{método diferencial} es más exacto que el \textit{método directo}.
+	Los resultados de los procedimientos, como puede notarse, no poseen una diferencia muy grande. Sin embargo, si uno observa las incertezas, en el \textit{método diferencial} se introduce menos error debido a que el error sistemático es menos significativo, es decir, se reduce. La diferencia de incertezas reside en que en el circuito medido por el método diferencial no se calcula la resta de los valores de tensión en vacío y tensión de plena carga que aparecen en el numerador de la expresión de regulación de carga de la \textit{Ecuación 7}. Por esta razón es que podemos concluir que el \textit{método diferencial} es más exacto y más preciso que el \textit{método directo}.
 \bigskip\bigskip\medskip
 
 
