--- a/trunk/TP1/Informe/66.02 - TP1.Grupo.1.tex
+++ b/trunk/TP1/Informe/66.02 - TP1.Grupo.1.tex
@@ -720,6 +720,7 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 \end{center}
 
 
+\newpage \textit{}
 \newpage
 
 	En el presente apéndice se muestran los resultados obtenidos al simular los circuitos propuestos en la \textit{sección 4.1}. Dichas simulaciones fueron realizadas con el software \textit{Proteus}\footnote{Para mas información sobre el software \textit{Proteus} puede dirijirse a \textit{http://www.labcenter.com/index.cfm}}.
@@ -783,7 +784,32 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 	\Large{\textit{``Correcciones''}}
 \end{center}
 
+\newpage \textit{}
+\newpage
 
+
+\section*{Correcciones realizadas en el informe}
+\medskip
+
+	A continuación se enuncian y listan las correcciones hechas sobre el informe respecto de la primera versión entregada:
+\bigskip
+
+\begin{itemize}
+	\item Se ha cambiado la \textit{única} aparición de la palabra "voltaje" por la palabra "tensión" a causa de que "voltaje" es una traducción errónea del equivalente en inglés para la palabra tensión (voltage).
+	\smallskip
+	
+	\item Se ha agregado un apéndice (\textit{Apéndice A}) en el cual se muestran las simulaciones correspondientes a los circuitos de medición de la \textit{sección 4.1} de manera de poder constatar los valores ideales esperados al inicio de dicho apartado.
+	\smallskip
+	
+	\item Se han rehecho las tablas 2 y 3 de la \textit{sección 4.2} y se ha agregado el por qué de las diferencias en los valores de \textit{R}.
+	\smallskip
+	
+	\item Se han rehecho las tablas 5 y 6 de la \textit{sección} 4.3, como así también las cuentas. Se ha modificado el cálculo del error absoluto de la regulación de carga en el \textit{método diferencial}.
+	\smallskip
+	
+	\item Se ha modificado la \textit{sección 4.3.3} de manera de expresar una conclusión y comparación aún más clara de los resultados obtenidos en secciones anteriores.
+
+\end{itemize}
 
 
 
