TP1: Correcciones gramaticales.

--- a/TP1/Informe/66.02 - TP1.Grupo.1.tex
+++ b/TP1/Informe/66.02 - TP1.Grupo.1.tex
@@ -795,7 +795,7 @@ $= |{1\over V_{0} - V_{pc}}|\times 2\Delta V + |{1 \over  I_{pc}}| \times \Delta
 \bigskip
 
 \begin{itemize}
-	\item Se ha cambiado la \textit{única} aparición de la palabra "voltaje" por la palabra "tensión" a causa de que "voltaje" es una traducción errónea del equivalente en inglés para la palabra tensión (voltage).
+	\item Se ha cambiado la \textit{única} aparición de la palabra ``voltaje'' por la palabra ``tensión'' a causa de que ``voltaje'' es una traducción errónea del equivalente en inglés para la palabra tensión (voltage).
 	\smallskip
 	
 	\item Se ha agregado un apéndice (\textit{Apéndice A}) en el cual se muestran las simulaciones correspondientes a los circuitos de medición de la \textit{sección 4.1} de manera de poder constatar los valores ideales esperados al inicio de dicho apartado.
